--- a/app/src/main/res/layout/bp_broadcast_main_layout.xml
+++ b/app/src/main/res/layout/bp_broadcast_main_layout.xml
@@ -4,4 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/force_offline"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="强制下线触发" />
 </LinearLayout>
