--- a/app/src/main/res/layout/fragment_dynamic_load_layout.xml
+++ b/app/src/main/res/layout/fragment_dynamic_load_layout.xml
@@ -7,7 +7,7 @@
     	并且静态加载一定要指定id或者tag属性来作为Fragment的唯一标识-->
     <fragment
         android:id="@+id/fragment1"
-        android:name="com.example.fragment.Fragment1"
+        android:name="com.example.Fragment.Fragment1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
