--- a/app/src/main/res/layout/fragment_life_cycle.xml
+++ b/app/src/main/res/layout/fragment_life_cycle.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/fragment1"
-        android:name="com.example.fragment.Fragment1"
+        android:name="com.example.Fragment.Fragment1"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
