--- a/app/src/main/res/layout/recycler_view_demo_layout.xml
+++ b/app/src/main/res/layout/recycler_view_demo_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.uicustomviews.TitleLayout
+    <com.example.UICustomViews.TitleLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
